--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,9 +25,9 @@
 	}
 }
 
-.small-window{
+/*.small-window{
 	min-height: 375px;
-}
+}*/
 
 .img-source{
 	background-color: #1C0B23;
@@ -49,7 +49,7 @@ h1{
 	font-size: 70px;
 }
 
-#edu, #work, #tech, #honors, #classes, #skills{
+#about, #skills, #projects, #contact{
 	background-color: #1C0B23; 
 	color: white;
 	font-size: 20px;
@@ -58,11 +58,18 @@ h1{
 	padding-bottom: 20px;
 }
 
+#me{
+	transform: scale(.1);
+	border-radius: 50%;
+	/*float: right;*/
+
+}
+
 /*3) Bootstrap*/
 
-.col-sm-9{
+/*.col-sm-9{
 	border-left: 1px solid white;
-}
+}*/
 
 @media (max-width: 810px) {
     .navbar-header {
@@ -119,20 +126,20 @@ h1{
 
 /*4) Honors, Employment */
 
-.award, #work .row{
+/*.award, #work .row{
 	margin-bottom: 2rem;
-}
+}*/
 
 /*5) Courses */
 
-#classes ul{
+/*#classes ul{
 	margin-left: -40px;
 	list-style: none;
 }
 
 #classes ul li{
 	padding-top: 5px;
-}
+}*/
 
 /*6) Skills */
 
@@ -140,3 +147,47 @@ h1{
 	margin-top: 5px;
 	text-align: left;
 }
+
+/*For later*/
+/*
+@media (max-width: @screen-xs) {
+    body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+    body{font-size: 14px;}
+}
+
+
+h5{
+    font-size: 1.4em;
+}  
+
+h1 {
+    font-size: 20px;
+}
+
+@media all and (max-device-width: 720px){
+    h1 {
+        font-size: 18px;
+    }
+}
+
+@media all and (max-device-width: 640px){
+    h1 {
+        font-size: 16px;
+    }
+}
+
+@media all and (max-device-width: 320px){
+    h1 {
+        font-size: 12px;
+    }
+}*/
+
+.container{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+
+}     
