--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -157,15 +157,20 @@ footer, .row{
 	color: gray;
 }
 
-.project{
+/*.project{
 	height: 300px;
-	/*width: 300px;*/
-	background-color: white;
+	
+	/*background-color: white;*/
+	/*background-image: url("../images/weather.png");
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+
 	margin-left: 20px;
-	margin-right: 20px;
-	background-image: url("../images/weather.png");
-	background-size: cover;
-}
+	margin-right: 20px;*/
+
+
+/*}*/
 
 .name{
 	/*margin-left: 5px;*/
@@ -222,3 +227,40 @@ h1 {
 	flex-wrap: nowrap;
 
 }     
+
+
+
+
+/*For credit: https://codepen.io/envincebal/full/BRvBOm/*/
+
+.project-row {
+    padding: 0 0 20px 0;
+}
+
+
+.project-image:hover {
+    box-shadow: 6px 6px 6px -3px rgba(0,0,0,0.75);
+}
+.project-image {
+    height: 300px;
+    transition: box-shadow 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.img-responsive{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+img {
+    max-width: 100%;
+}
+
+img {
+    vertical-align: middle;
+}
+
+img {
+    border: 0;
+}
