--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@
 	min-height: 375px;
 }*/
 
-.img-source{
+p{
 	background-color: #1C0B23;
 	text-align: right;
 	padding-right: 2rem;
@@ -37,6 +37,7 @@
 
 .img-source a{
 	color: #0bb3bf;
+	background-color: #1C0B23;
 }
 
 @media (max-width: 768px){
@@ -83,26 +84,7 @@ footer, .row{
 
 }
 
-#me{
-	transform: scale(.1);
-	border-radius: 50%;
-	/*float: right;*/
-
-}
-
-.apps{
-	/*transform: scale(.95);*/
-}
-
-.apps:hover{
-	box-shadow: 0 0 10px 5px black;
-}
-
 /*3) Bootstrap*/
-
-/*.col-sm-9{
-	border-left: 1px solid white;
-}*/
 
 @media (max-width: 810px) {
     .navbar-header {
@@ -163,53 +145,6 @@ footer, .row{
 
 
 }
-
-
-#icon-labels{
-	margin-top: 5px;
-	text-align: left;
-}
-
-/*.title{
-	font-size: 30px;
-}*/
-/*For later*/
-/*
-@media (max-width: @screen-xs) {
-    body{font-size: 10px;}
-}
-
-@media (max-width: @screen-sm) {
-    body{font-size: 14px;}
-}
-
-
-h5{
-    font-size: 1.4em;
-}  
-
-h1 {
-    font-size: 20px;
-}
-
-@media all and (max-device-width: 720px){
-    h1 {
-        font-size: 18px;
-    }
-}
-
-@media all and (max-device-width: 640px){
-    h1 {
-        font-size: 16px;
-    }
-}
-
-@media all and (max-device-width: 320px){
-    h1 {
-        font-size: 12px;
-    }
-}*/
-
 .container{
 	display: flex;
 	flex-direction: row;
@@ -218,11 +153,9 @@ h1 {
 }     
 
 
+/*For help and credit: https://codepen.io/envincebal/full/BRvBOm/*/
 
-
-/*For credit: https://codepen.io/envincebal/full/BRvBOm/*/
-
-.project-row {
+.project-row, .icon-row {
     padding: 0 0 20px 0;
 }
 
@@ -249,17 +182,14 @@ img {
     border: 0;
 }
 
-/*img {
-    vertical-align: middle;
-}
-
-img {
-    border: 0;
-}*/
-
 .section-header {
     padding: 0 0 20px 0;
-    /*font-weight: 700;*/
-    letter-spacing: 2px;
     font-size: 30px;
+}
+
+.profile-pic {
+    border-radius: 100%;
+    border: 5px solid;
+    max-width: 230px;
+    align-self: right;
 }
