--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,6 +79,18 @@ footer, .row{
 	/*grey: #a49da7;*/
 }
 
+#bootstrap-img-row{
+	margin-top: 5px;
+}
+
+.lang-label{
+	padding-top: 5px;
+}
+
+#bootstrap-label{
+	padding-top: 18px;
+}
+
 #contact{
 	background-color: #e8e6e9;
 	color: #1C0B23;
@@ -162,6 +174,12 @@ footer, .row{
 #projects{
 	background-color: #766c7b;
 	padding-bottom: 10px;
+
+}
+
+object{
+	width: 100%;
+	height: 100%;
 }
 
 #completed-projects{
@@ -188,6 +206,7 @@ a:hover, a:visited{
 }
 
 i{
+	margin-top: 5px;
 	color: #1C0B23;
 }
 
