--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,16 +79,16 @@ footer, .row{
 	/*grey: #a49da7;*/
 }
 
-#bootstrap-img-row{
-	margin-top: 5px;
-}
-
 .lang-label{
 	padding-top: 5px;
 }
 
 #bootstrap-label{
 	padding-top: 18px;
+}
+
+#npm-label{
+    padding-top: 56px;
 }
 
 #contact{
@@ -154,6 +154,12 @@ footer, .row{
 .dropdown ul li a{
 	font-size: 20px;
 	color: gray;
+}
+
+/*Skills*/
+
+.push-down-img-row {
+    margin-top: 5px;
 }
 
 /*6) Projects*/
